--- a/src/lib/style/settings.scss
+++ b/src/lib/style/settings.scss
@@ -21,6 +21,8 @@ $color-light-2: #8b7983;
 $color-accent-strong: #c28282;
 $color-accent-weak: #6f687a;
 
+$color-accent-error: #c73636;
+
 $margin-small: 0.5em;
 $margin-big:1em;
 
