--- a/src/lib/style/settings.scss
+++ b/src/lib/style/settings.scss
@@ -20,6 +20,7 @@ $color-light-2: #8b7983;
 
 $color-accent-strong: #c28282;
 $color-accent-weak: #6f687a;
+$color-accent-blue: #0312a8;
 
 $color-accent-error: #c73636;
 
