--- a/src/lib/style/dark.css
+++ b/src/lib/style/dark.css
@@ -1,17 +1,14 @@
 :root {
-  filter: invert(100%);
+  filter: invert(100%) !important;
 }
 * { 
   background-color: inherit;
 }
 
 img:not([src*=".svg"]), video {  
-  filter: invert(100%);
+  filter: invert(100%) !important;
 }
 
-dialog {  
-  filter: invert(100%) drop-shadow(0px 0px 10px #0009) !important;
-}
 
 
 
