--- a/src/lib/style/settings.scss
+++ b/src/lib/style/settings.scss
@@ -1,28 +1,28 @@
 @import '@fontsource/fira-mono';
 
-$font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-$font-mono: 'Fira Mono', monospace;
+// $font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+// 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+// $font-mono: 'Fira Mono', monospace;
 
-$color-text: #000000;
+// $color-text: #000000;
 
-$color-bg-0: #e8dad1;
-$color-bg-1: #eddfd8;
-$color-bg-2: #dcdcde;
+// $color-bg-0: #e8dad1;
+// $color-bg-1: #eddfd8;
+// $color-bg-2: #dcdcde;
 
-$color-dark-0: #181923;
-$color-dark-1: #292d41;
-$color-dark-2: #181923;
+// $color-dark-0: #181923;
+// $color-dark-1: #292d41;
+// $color-dark-2: #181923;
 
-$color-light-0: #b59e90;
-$color-light-1: #a58d89;
-$color-light-2: #8b7983;
+// $color-light-0: #b59e90;
+// $color-light-1: #a58d89;
+// $color-light-2: #8b7983;
 
-$color-accent-strong: #c28282;
-$color-accent-weak: #6f687a;
-$color-accent-blue: #0312a8;
+// $color-accent-strong: #c28282;
+// $color-accent-weak: #6f687a;
+// $color-accent-blue: #0312a8;
 
-$color-accent-error: #c73636;
+// $color-accent-error: #c73636;
 
 $margin-small: 0.5em;
 $margin-big:1em;
