--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -1,15 +1,39 @@
 @use "$lib/style/settings.scss";
 
 :root {
-  font-family: settings.$font-body;
-	color: settings.$color-text;
+  --font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+      Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --font-mono: 'Fira Mono', monospace;
+
+  --color-text: #000000;
+
+  --color-bg-0: #e8dad1;
+  --color-bg-1: #eddfd8;
+  --color-bg-2: #dcdcde;
+
+  --color-dark-0: #181923;
+  --color-dark-1: #292d41;
+  --color-dark-2: #181923;
+
+  --color-light-0: #b59e90;
+  --color-light-1: #a58d89;
+  --color-light-2: #8b7983;
+
+  --color-accent-strong: #c28282;
+  --color-accent-weak: #6f687a;
+  --color-accent-blue: #0312a8;
+
+  --color-accent-error: #c73636;
+
+  font-family: var(--font-body);
+	color: var(--color-text);
 }
 
 body {
 	min-height: 100vh;
 	margin: 0;
 	background-attachment: fixed;
-	background-color: settings.$color-bg-0;
+	background-color: var(--color-bg-0);
 	background-size: 100vw 100vh;
 }
 
@@ -27,7 +51,7 @@ p {
 
 a {
 	font-weight: 600;
-	color: settings.$color-accent-strong;
+	color: var(--color-accent-strong);
 	text-decoration: underline ;
 }
 
@@ -46,13 +70,13 @@ h2 {
 
 pre {
 	font-size: 16px;
-	font-family: settings.$font-mono;
+	font-family: var(--font-mono);
 	background-color: rgba(255, 255, 255, 0.45);
 	border-radius: 3px;
 	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
 	padding: 0.5em;
 	overflow-x: auto;
-	color: settings.$color-text;
+	color: var(--color-text);
 }
 
 .text-column {
