🌛 nicer dark theme

--- a/src/lib/style/themes/dark.css
+++ b/src/lib/style/themes/dark.css
@@ -3,11 +3,11 @@
       Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --font-mono: 'Fira Mono', monospace;
 
-  --color-text: #fff;
+  --color-text: #d9cec8;
 
-  --color-bg-0: #000;
-  --color-bg-1: #eddfd8;
-  --color-bg-2: #dcdcde;
+  --color-bg-0: #0f1016;
+  --color-bg-1: #181922;
+  --color-bg-2: #13141c;
 
   --color-dark-0: #181923;
   --color-dark-1: #292d41;
