--- a/src/lib/style/themes/light.css
+++ b/src/lib/style/themes/light.css
@@ -5,9 +5,9 @@
 
   --color-text: #000000;
 
-  --color-bg-0: #17252e;
-  --color-bg-1: #122027;
-  --color-bg-2: #232321;
+  --color-bg-0:#e8dad1;
+  --color-bg-1: #eddfd8;
+  --color-bg-2: #dcdcde;
 
   --color-dark-0: #181923;
   --color-dark-1: #292d41;
